<resources>
    <string name="app_name">Expense Monitor</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="SelectCategory">Select Expense Category</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="next">Next</string>
    <string name="mange_expense">Mange Expense</string>
    <string name="update_expense">Update Expense</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="amount">Expense Amount</string>
    <string name="description">Expense Description</string>
    <string name="create_new_expense">Create New Expense</string>
    <string name="change_currency">Change Your Currency</string>
    <string name="setting">Settings</string>
    <string name="signout">Sign Out</string>
    <string name="Adultsclothing">Adults clothing</string>
    <string name="Adultsshoes">Adults Shoes</string>
    <string name="Autoinsurance">Auto insurance</string>
    <string name="AlcoholBars">Alcohol/Bars</string>
    <string name="Anniversary">Anniversary</string>
    <string name="Administrativeviolations">Administrative violations</string>
    <string name="Alimonyandchildsupport">Alimony and child support</string>
    <string name="Birthday">Birthday</string>
    <string name="Babysitter">Babysitter</string>
    <string name="Bigpurchases">Big purchases</string>
    <string name="Books">Books</string>
    <string name="Beauty">Beauty</string>
    <string name="Cafes">Cafes</string>
    <string name="Carpayment">Car payment</string>
    <string name="Carwarranty">Car warranty</string>
    <string name="Cable">Cable</string>
    <string name="Childrensclothing">Children’s clothing</string>
    <string name="Childrensshoes">Children’s shoes</string>
    <string name="Cleaningsupplies">Cleaning supplies</string>
    <string name="Christmas">Christmas</string>
    <string name="Creditcards">Credit cards</string>
    <string name="Cosmetics">Cosmetics</string>
    <string name="Charities">Charities</string>
    <string name="ChannelSubscriptions">Channel Subscriptions</string>
    <string name="Concerts">Concerts</string>
    <string name="Cinema">Cinema</string>
    <string name="Consumerloans">Consumer loans</string>
    <string name="CarLeasing">Car Leasing</string>
    <string name="Casino">Casino</string>
    <string name="Cheque">Cheque</string>
    <string name="Currencyexchange">Currency exchange</string>
    <string name="Disabilityinsurance">Disability insurance</string>
    <string name="Dishwasherdetergent">Dishwasher detergent</string>
    <string name="Dentalcare">Dental care</string>
    <string name="Enquiries">Enquiries</string>
    <string name="EmergencyFund">Emergency Fund</string>
    <string name="Electricity">Electricity</string>
    <string name="Educationandcourses">Education and courses</string>
    <string name="Financialplanning">Financial planning</string>
    <string name="Fuel">Fuel</string>
    <string name="Gifts">Gifts</string>
    <string name="Gymmemberships">Gym memberships</string>
    <string name="Gas">Gas</string>
    <string name="Garbage">Garbage</string>
    <string name="Games">Games</string>
    <string name="Groceries">Groceries</string>
    <string name="Hobbies">Hobbies</string>
    <string name="Householdrepairs">Household repairs</string>
    <string name="Haircuts">Haircuts</string>
    <string name="Healthinsurance">Health insurance</string>
    <string name="Healthandpharmaceuticals">Health and pharmaceuticals</string>
    <string name="Homefees">Home fees</string>
    <string name="Internet">Internet</string>
    <string name="Investments">Investments</string>
    <string name="Invoices">Invoices</string>
    <string name="LeisureTimeActivities">Leisure Time Activities</string>
    <string name="Lifeinsurance">Life insurance</string>
    <string name="Lottery">Lottery</string>
    <string name="Laundrydetergent">Laundry detergent</string>
    <string name="Loansbetweenindividuals">Loans between individuals</string>
    <string name="Magazines">Magazines</string>
    <string name="Newspapers">Newspapers</string>
    <string name="Medications">Medications</string>
    <string name="Medicaldevices">Medical devices</string>
    <string name="Mortgage">Mortgage</string>
    <string name="Maintenance">Maintenance</string>
    <string name="Movies">Movies</string>
    <string name="Music">Music</string>
    <string name="Othersavings">Other savings</string>
    <string name="OilChanges">Oil Changes</string>
    <string name="OnlineRetailpurchases">Online Retail purchases</string>
    <string name="OnlineServices">Online Services</string>
    <string name="Otherinsuranceexpenses">Other insurance expenses</string>
    <string name="Otherinvestments">Other investments</string>
    <string name="Otherpersonaltransfers">Other personal transfers</string>
    <string name="Propertytaxes">Property taxes</string>
    <string name="Parkingfees">Parking fees</string>
    <string name="Phones">Phones</string>
    <string name="Primarycare">Primary care</string>
    <string name="Petfood">Pet food</string>
    <string name="protectionplan">protection plan</string>
    <string name="Personalloans">Personal loans</string>
    <string name="Postalservices">Postal services</string>
    <string name="Rent">Rent</string>
    <string name="Repairs">Repairs</string>
    <string name="RegistrationFees">Registration Fees</string>
    <string name="Restaurants">Restaurants</string>
    <string name="Sport">Sport</string>
    <string name="Specialoccasion">Special occasion</string>
    <string name="Salonservices">Salon services</string>
    <string name="Subscriptions">Subscriptions</string>
    <string name="Studentloans">Student loans</string>
    <string name="SchoolSupplies">School Supplies</string>
    <string name="Savings">Savings</string>
    <string name="Specialtycare">Specialty care</string>
    <string name="Theatre">Theatre</string>
    <string name="Travelexpenses">Travel expenses</string>
    <string name="Tires">Tires</string>
    <string name="Toiletries">Toiletries</string>
    <string name="Tools">Tools</string>
    <string name="Tobacco">Tobacco</string>
    <string name="Toaccountofrelatives">To account of relatives</string>
    <string name="Toownaccount">To own account</string>
    <string name="Transportationexpenses">Transportation expenses</string>
    <string name="Unionsandassociations">Unions and associations</string>
    <string name="Utilities">Utilities</string>
    <string name="Urgentcare">Urgent care</string>
    <string name="Vacations">Vacations</string>
    <string name="Vehiclepurchase">Vehicle purchase</string>
    <string name="Water">Water</string>
    <string name="Wedding">Wedding</string>
    <string name="food">Food</string>
    <string name="breakfast">BreakFast</string>
    <string name="lunch">Lunch</string>
    <string name="supper">Supper</string>
    <string name="fastfood">FastFood</string>
    <string name="colddrinks">Cold Drink</string>
    <string name="hotdrink">Hot Drink</string>
    <string name="tea">Tea</string>
    <string name="cigarette">Cigarette</string>
    <string name="soap">Soap</string>
    <string name="showersoap">Shower Soap</string>
    <string name="salad">Salad</string>
    <string name="boosh">Boosh</string>
    <string name="coffee">Coffe</string>
    <string name="teawithmilk">Tea With Milk</string>
    <string name="meet">Meet</string>
    <string name="beef">Beef</string>
    <string name="sheepmeat">Sheep Meat</string>
    <string name="rabbitmeat">Rabbit Meat</string>
    <string name="chickenmeat">Chicken meat</string>
    <string name="wildmeat">Wild Meat</string>
    <string name="meatofbirds">Meat Of Birds</string>
    <string name="meatofcamels">Meat Of Camels</string>
    <string name="milk">Milk</string>
    <string name="drymilk">Dry Milk</string>
    <string name="juice">Juice</string>
    <string name="credit">Credit</string>
    <string name="caroil">Oil For Car</string>
    <string name="accessories">Car Accessories</string>
    <string name="fill_empty">Please Fill The Empty Field</string>
    <string name="select_category">Please Select Expense Category</string>
    <string name="expense_created_successfuly">Expense Created Successfully</string>
    <string name="select_option">Please Choose an Option</string>
    <string name="select_currency">Select Your Currency</string>
    <string name="expense_update_successfuly">Expense Updated Successfully</string>
    <string name="expense_deleted_successfuly">Expense Deleted Successfully</string>
    <string name="weak_internet_connection">There is No Internet Connection :(</string>
    <string name="all_your_expenses_in_one_place">All Your Expenses In One Place</string>
    <string name="expense_monitor">Expense Monitor</string>
    <string name="date">Date</string>
    <string name="no_daily_expenses">No Daily Expenses Added</string>
    <string name="no_weekly_expenses">No Weekly Expenses Added</string>
    <string name="no_monthly_expenses">No Monthly Expenses Added</string>
    <string name="about">Others</string>
    <string name="build_version">Build Version</string>
    <string name="general_settings">General Settings</string>
    <string name="registeration">Registeration</string>
    <string name="create_expense">Create Expense</string>
    <string name="share_application">Share Application</string>
    <string name="app_failed_to_update">App Update failed, please try again on the next app launch.</string>
    <string name="update_download">An update has just been downloaded.</string>
    <string name="restart">RESTART</string>
    <string name="privacy_policy">By Proceeding To SignIng You Agree With Privacy Policy</string>
    <string name="search_select_currency">Search or Select Currency</string>
    <string name="select_or_category">Search or Select Category</string>
    <string name="close">Close</string>
    <string name="privacy_policy_words">Privacy Policy</string>
    <string name="exceed_expenses">Notify Me When a Certain Expense Value Is Exceeded</string>
    <string name="expense_value">Specified Expense</string>
    <string name="enter_fixed_expense_here">Enter The Fixed Expense Value Here</string>
    <string name="fixed_expense_title">Fixed Expense</string>
    <string name="rest_fixed_expense">Reset</string>
    <string name="cancel_fixed_expense">Cancel</string>
    <string name="save">Save</string>
    <string name="message_body_fixed_expense">The Specified Expense Was Exceeded And Its Value Was</string>
    <string name="message_body_fixed_expenses">Do You Want To Reset The Fixed Expense Or Canceled It.</string>
    <string name="enter_fixed_expense">Please Enter The Fixed Expense Value</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="daily_report">The Daily Report</string>
    <string name="add_new_category">Add New Category</string>
    <string name="ok">OK</string>
    <string name="close_categories">Close</string>
    <string name="try_later">OOPs Failed Please Try Later</string>
    <string name="search_for_category">Search For Category</string>
    <string name="categoires_expense_content_descriptions">categoires_expense_content_descriptions</string>
    <string name="logo_image_content_description">logo_image_content_description</string>
    <string name="getting_started">Getting Started</string>
    <string name="choose_your_currency">Choose Your Currency</string>
    <string name="report_about_currencies">Report About Currencies</string>
    <string name="report_currency">Report About Currencies</string>
    <string name="no_expenses_found">There Are No Added Expenses Currently</string>
    <string name="report_about_categories">Report About Categories</string>
    <string name="no_data_available">No data Available</string>
</resources>